# django-template

./: cookiecutter.json
.github/workflows/: run-tests.yml
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .env  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  base.Dockerfile  docker-compose.env  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt  settings.yaml
{{cookiecutter.project_slug}}/.github/workflows/: release.yaml
{{cookiecutter.project_slug}}/config/: .secrets.yaml  gunicorn.conf.py  settings.yaml
{{cookiecutter.project_slug}}/docker/: backend.env  backend.yml  build.yml  test.yml  utils.yml
{{cookiecutter.project_slug}}/docker/config/: .secrets.yaml  override.yaml
{{cookiecutter.project_slug}}/src/: manage.py
{{cookiecutter.project_slug}}/src/service/: settings.py  urls.py  wsgi.py
